revision to page layout

--- a/index.html
+++ b/index.html
@@ -27,24 +27,31 @@
             <section class="card">
                 <div class="card-header"><h3>About Me</h3></div>
                     <div class="about-content">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus possimus voluptatum impedit sequi natus non. Molestias, doloremque quos aliquid 
-                           molestiae deleniti officiis ullam, necessitatibus ratione nam error voluptas laboriosam iure?
-                           Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus possimus voluptatum impedit sequi natus non. Molestias, doloremque quos aliquid 
-                           molestiae deleniti officiis ullam, necessitatibus ratione nam error voluptas laboriosam iure?</p>
+                        <p>Hello! My name is Jason Auger and I am from Riverton, Utah and I have lived here for the last 24
+                years. Prior to living in Riverton, I grew up in the West Jordan Utah area. I enjoy being in the great
+                outdoors and riding
+                motorcycles and going to the beach when I travel and have the occasion to go. I am currently studing
+                Software engineering at BYU Pathway and I am excited to achieve a bachelors degree in this field.</p>
                         <img src="images/profile-ja-sm.jpg" alt="Picture of Jason Auger" class="profile-pic">
                     </div>
-                <div class="location"><h2>Utah, United States</h2>
-                <p>__________________________________________________</p>
-                </div>
+                <div class="location"><p>Utah, United States</p></div>
+                <hr>                
                 <div class="location-content">
                     <figure class="flag">
-                        <img src="images/us-flag.jpg" alt="picture of US flag">
-                        <figcaption>Official Flag of the United States</figcaption>
+                        <img src="images/flag-of-utah.jpg" alt="picture of US flag">
+                        <figcaption>Official Flag of the State of Utah</figcaption>
                     </figure>    
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, veritatis dolor non eius labore ipsum 
-                       tempore ducimus quia! Harum architecto repudiandae eius quis non labore ab animi porro a delectus!
-                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, veritatis dolor non eius labore ipsum 
-                       tempore ducimus quia! Harum architecto repudiandae eius quis non labore ab animi porro a delectus!</p>
+                    <p>Utah is a western U.S. state known for its striking natural landscapes, cultural heritage, and outdoor
+                        recreation. The state is home to vast deserts, rugged mountains, and the world-famous “Mighty 5”
+                        national
+                        parks.
+                        Each of these 5 parks showcase unique rock formations and dramatic scenery. Salt Lake City, the
+                        capital, lies near the Great Salt Lake and serves as a cultural and economic hub, with deep ties to the
+                        history of The Church of Jesus Christ of Latter-day Saints.
+                        Utah’s diverse geography supports year-round activities such as skiing in the Wasatch Mountains,
+                        hiking through red rock canyons, and exploring expansive wilderness areas. Its combination of
+                        natural beauty, strong community traditions, and growing economy makes Utah a distinctive and dynamic
+                        place.</p>
                 </div>
             </section>
             <section class="card">
