page audit tool update

--- a/index.html
+++ b/index.html
@@ -3,25 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Description" content="">
+    <meta name="Description" content="WDD 131 - Dynamic Web Fundamentals Jason Auger Biographical Information">
     <meta name="author" content="Jason Auger">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/...">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="scripts/getdates.js" defer></script>
     <title>WDD 131 – Dynamic Web Fundamentals – Jason Auger</title>
 </head>
 <body>
     <div class="container">
     <header>
-        <h1><span id="course-title">WDD 131: Dynamic Web Fundamentals - Jason Auger</span></h1>
+        <h1><span id="course-title">WDD 131: Dynamic Web Fundamentals - Jason Auger</span></h1>    
+        <nav>
+            <ul>
+                <li><a href="https://LinkedIn.com">LinkedIn</a></li>
+                <li><a href="https://byupw.instructure.com">Canvas</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/study/scriptures">Scripture</a></li>
+                <li><a href="#">Final Project</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <ul>
-            <li><a href="https://LinkedIn.com">LinkedIn</a></li>
-            <li><a href="https://byupw.instructure.com">Canvas</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/study/scriptures">Scripture</a></li>
-            <li><a href="#">Final Project</a></li>
-        </ul>
-    </nav>
     <main>
         <div class="card-holder">
             <section class="card">
