--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Description" content="WDD 131 - Dynamic Web Fundamentals Jason Auger Biographical Information">
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals Jason Auger Biographical Information">
     <meta name="author" content="Jason Auger">
     <link rel="stylesheet" href="styles/base.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/...">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+
+
     <script src="scripts/getdates.js" defer></script>
     <title>WDD 131 – Dynamic Web Fundamentals – Jason Auger</title>
 </head>
