--- a/temples.html
+++ b/temples.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="WDD 131 - Dynamic Web Fundamentals Jason Auger Temple Picture Album of Temples Visited">
+    <meta name="author" content="Jason Auger">
     <link rel="stylesheet" href="styles/temples.css">
     <link rel="stylesheet" href="styles/temples-large.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,14 +13,14 @@
 
 
     <script src="scripts/temples.js" defer></script>
-    <script src="scripts/getdates.js" defer></script>
+    <script src="scripts/getdates.js" defer></script> 
     <title>Document</title>
 </head>
 <body>
     <header class="container">
         <nav>
             <p>Temple Album</p>
-            <button type="button" id="menu-button"></button>
+            <button type="button" name="small-menu" id="menu-button"></button>
             <ul class="navigation"> 
                 <li><a href="#">Home</a></li> 
                 <li><a href="#">Old</a></li>
@@ -33,40 +35,40 @@
         <h1>Home</h1>
         <div class="gallery">       
             <figure>
-                <img src="images/rome-temple-sm.jpg">
+                <img src="images/rome-temple-sm.jpg" alt="Rome Italy Temple">
                 <figcaption>Rome Temple</figcaption>
             </figure>
             
             <figure>
-                <img src="images/mexico-city-temple-sm.jpg">
+                <img src="images/mexico-city-temple-sm.jpg" alt="Mexico City Mexico Temple">
                 <figcaption>Mexico City Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/calgary-alberta-temple-sm.jpg">
+                <img src="images/calgary-alberta-temple-sm.jpg" alt="Calgary Alberta Canada Temple">
                 <figcaption>Calgary Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/cardston-alberta-temple-sm.jpg">
+                <img src="images/cardston-alberta-temple-sm.jpg" alt="Cardston Alberta Canada Temple">
                 <figcaption>Cardston Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/santo-domingo-temple-sm.jpg">
+                <img src="images/santo-domingo-temple-sm.jpg" alt="Santo Domingo Dominican Republic Temple">
                 <figcaption>Santo Domingo Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/hong-kong-temple-sm.jpg">
+                <img src="images/hong-kong-temple-sm.jpg" alt="Hong Kong China SAR Temple">
                 <figcaption>Hong Kong Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/taipei-temple-sm.jpg">
+                <img src="images/taipei-temple-sm.jpg" alt="Taipei Taiwan Temple">
                 <figcaption>Taipe Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/laie-hawaii-temple-sm.jpg">
+                <img src="images/laie-hawaii-temple-sm.jpg" alt="Laie Hawaii Temple">
                 <figcaption>Laie Temple</figcaption>
             </figure>
             <figure>
-                <img src="images/madrid-spain-temple-sm.jpg">
+                <img src="images/madrid-spain-temple-sm.jpg" alt="Madrid Spain Temple">
                 <figcaption>Madrid Temple</figcaption>
             </figure>
         </div>
