updated html title tag content

--- a/temples.html
+++ b/temples.html
@@ -14,7 +14,7 @@
 
     <script src="scripts/temples.js" defer></script>
     <script src="scripts/getdates.js" defer></script> 
-    <title>Document</title>
+    <title>WDD 131 Temple Picture Album</title>
 </head>
 <body>
     <header class="container">
