--- a/temples.html
+++ b/temples.html
@@ -20,7 +20,7 @@
     <header class="container">
         <nav>
             <p>Temple Album</p>
-            <button type="button" name="small-menu" id="menu-button"></button>
+            <button type="button" id="menu-button" aria-label="small-menu"></button>
             <ul class="navigation"> 
                 <li><a href="#">Home</a></li> 
                 <li><a href="#">Old</a></li>
