Second page validation update

--- a/form.html
+++ b/form.html
@@ -24,8 +24,8 @@
             <div class="name-email">
                 <div class="form-group">
                     <label for="prod-name">Product Name</label>
-                    <select name="prod-name" id="prod-name" selected required>
-                        <option value="">Select a Product...</option>
+                    <select name="prod-name" id="prod-name" required>
+                        <option value="" selected disabled>Select a Product...</option>
                         
                     </select>    
                 </div>
@@ -70,19 +70,19 @@
                 <p>(Check all that apply)</p>
             </div>
             <div class="check-box">
-                <label>
+                <label for="check-box-1">
                     <input type="checkbox" id="check-box-1" name="useful-feature" value="1" >
                     Durabililty
                 </label>
-                <label>
+                <label for="check-box-2">
                     <input type="checkbox" id="check-box-2" name="useful-feature" value="2" >
                     Ease of Use
                 </label>
-                <label>
+                <label for="check-box-3">
                     <input type="checkbox" id="check-box-3" name="useful-feature" value="3" >
                     Performance
                 </label>
-                <label>
+                <label for="check-box-4">
                     <input type="checkbox" id="check-box-4" name="useful-feature" value="4" >
                     Design
                 </label>
